@@ -201,6 +201,7 @@ IF(WIN32)
   OPTION(DSOUND      "directsound back-end"  OFF)
 ENDIF(WIN32)
 
+OPTION(NATIVE      "native/oss back-end"  ON)
 OPTION(ARTS        "arts back-end"        ON)
 OPTION(ARTS_DLOPEN "arts dynamic loading" ON)
 OPTION(ESD         "esd back-end"         ON)
@@ -348,6 +349,7 @@ ENDIF(HAVE_LIB_M)
 
 
 # Special OS objs for target systems
+IF(NATIVE)
 IF(CMAKE_SYSTEM MATCHES "Linux")
   ADD_DEFINE(USE_BACKEND_NATIVE_IRIX)
   SET(OS_OBJS ${LINUX_OBJS})
@@ -387,7 +389,6 @@ ELSE(CMAKE_SYSTEM MATCHES "Darwin")
 IF(CMAKE_SYSTEM MATCHES "morphos")
   ADD_DEFINE(USE_BACKEND_NATIVE_MORPHOS)
   SET(OS_OBJS ${MORPHOS_OBJS})
-  CHECK_INCLUDE_FILE(dlfcn.h MOSTHREAD_AVAILABLE)
 ELSE(CMAKE_SYSTEM MATCHES "morphos")
 
   MESSAGE("unknown System")
@@ -399,8 +400,13 @@ ENDIF(CMAKE_SYSTEM MATCHES "IRIX")
 ENDIF(CMAKE_SYSTEM MATCHES "SunOS")
 ENDIF(CMAKE_SYSTEM MATCHES "BSD")
 ENDIF(CMAKE_SYSTEM MATCHES "Linux")
+ENDIF(NATIVE)
 
 # threads handling
+IF(CMAKE_SYSTEM MATCHES "morphos")
+  CHECK_INCLUDE_FILE(dlfcn.h MOSTHREAD_AVAILABLE)
+ENDIF(CMAKE_SYSTEM MATCHES "morphos")
+
 IF(MOSTHREAD_AVAILABLE)
   ADD_DEFINE(USE_MORPHOSTHREADING)
 ELSE(MOSTHREAD_AVAILABLE)
@@ -462,7 +468,7 @@ IF(${BACKEND_OPTION})
       ENDIF(BACKEND_LIBS MATCHES "^$")
 
       IF(BACKEND_LIBS MATCHES "NOTFOUND")
-        MESSAGE("${BACKEND_OPTION} back-end library ${BACKEND_LIB} not found.")
+        MESSAGE(STATUS "${BACKEND_OPTION} back-end library ${BACKEND_LIB} not found.")
         SET(${BACKEND_OPTION} OFF)
       ELSE(BACKEND_LIBS MATCHES "NOTFOUND")
 
@@ -489,12 +495,12 @@ IF(${BACKEND_OPTION})
           MESSAGE(STATUS "${BACKEND_OPTION} back-end support - static")
           SET(BACKEND_FOUND ON)
         ELSE(BACKEND_LINKS)
-          MESSAGE("${BACKEND_OPTION} back-end doesn't link.")
+          MESSAGE(STATUS "${BACKEND_OPTION} back-end doesn't link.")
         ENDIF(BACKEND_LINKS)
       ENDIF(BACKEND_LIBS MATCHES "NOTFOUND")
     ENDIF(HAVE_LIB_DL AND ${BACKEND_OPTION}_DLOPEN)
   ELSE(HAVE_BACKEND_HEADER)
-    MESSAGE("${BACKEND_OPTION} back-end header ${BACKEND_HEADER} not found.")
+    MESSAGE(STATUS "${BACKEND_OPTION} back-end header ${BACKEND_HEADER} not found.")
   ENDIF(HAVE_BACKEND_HEADER)
 ENDIF(${BACKEND_OPTION})
 
